--- a/static/index.html
+++ b/static/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"><meta http-equiv="Cache-Control" content="no-cache,no-store,must-revalidate"><title>Aurora СВЕМА</title><script src="https://telegram.org/js/telegram-web-app.js"></script><style>:root{--bg:#0d0d0f;--c:#00f3ff;--p:#ff0055;--b:#1a1a1c;--tl:75px;--tr:28px}body{background-color:var(--bg);background-image:radial-gradient(circle at center,#1a1a1f 0,#000 100%);color:#fff;font-family:'SF Mono','Cascadia Code','Roboto Mono','Courier New',monospace;display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;margin:0;overflow:hidden;user-select:none}.inf{text-align:center;width:100%;max-width:340px;margin-bottom:25px;padding:10px;border-radius:8px;background:rgba(0,0,0,.4);border:1px solid rgba(0,243,255,.1);box-shadow:0 5px 15px rgba(0,0,0,.5)}.tit{color:#fff;font-weight:900;font-size:17px;text-transform:uppercase;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;display:block;text-shadow:0 0 10px rgba(255,255,255,.5);letter-spacing:.5px}.art{font-size:14px;color:var(--c);font-weight:700;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;display:block;margin-top:4px;text-transform:uppercase;letter-spacing:1px}.cas{width:350px;height:220px;background:linear-gradient(to bottom,#eeeeeb,#dcdcd8);border-radius:14px;position:relative;box-shadow:inset 0 2px 3px rgba(255,255,255,.9),inset 0 -4px 6px rgba(0,0,0,.2),0 30px 40px rgba(0,0,0,.8),0 0 0 1px #888;display:flex;flex-direction:column;align-items:center;padding:15px;transition:transform .1s}.cas::after{content:'';position:absolute;bottom:0;left:10%;width:80%;height:20px;background:linear-gradient(to bottom,#dcdcd8,#cececa);border-radius:4px 4px 0 0;box-shadow:inset 0 2px 4px rgba(0,0,0,.1)}.scr{position:absolute;width:14px;height:14px;background:linear-gradient(135deg,#d4d4d4,#888);border-radius:50%;box-shadow:inset 1px 1px 3px rgba(0,0,0,.6),0 1px 1px rgba(255,255,255,.8);border:1px solid #666}.scr::before,.scr::after{content:'';position:absolute;top:50%;left:20%;width:60%;height:1.5px;background:rgba(0,0,0,.7);box-shadow:0 1px 0 rgba(255,255,255,.3)}.scr::before{transform:translateY(-50%) rotate(45deg)}.scr::after{transform:translateY(-50%) rotate(-45deg)}.tl{top:12px;left:12px}.tr{top:12px;right:12px}.bl{bottom:12px;left:12px}.br{bottom:12px;right:12px}.lbl{width:92%;height:140px;background:#faf9f5;border-radius:8px;position:relative;box-shadow:inset 0 0 20px rgba(0,0,0,.03),0 1px 3px rgba(0,0,0,.3);border:1px solid rgba(0,0,0,.1);display:flex;flex-direction:column;align-items:center;overflow:hidden;background-image:repeating-linear-gradient(0deg,transparent,transparent 4px,rgba(0,0,0,.01) 4px,rgba(0,0,0,.01) 5px)}.sl{position:absolute;top:14px;left:16px;border:2px solid #c1121f;color:#c1121f;padding:2px 8px;font-family:'Times New Roman',Times,serif;font-weight:900;font-size:16px;border-radius:4px;letter-spacing:1.5px;text-shadow:0 0 1px rgba(193,18,31,.3)}.rl{position:absolute;top:20px;right:16px;width:48%;height:10px;border-top:2.5px solid #c1121f;border-bottom:2.5px solid #c1121f}.bb{position:absolute;top:50px;width:100%;height:55px;background:#181818;display:flex;justify-content:center;align-items:center;box-shadow:inset 0 3px 6px #000,0 1px 1px rgba(255,255,255,.5)}.gb{position:absolute;bottom:10px;width:92%;height:24px;background:#8fb399;display:flex;justify-content:space-between;align-items:center;padding:0 12px;color:#a00;font-family:'Arial Black',sans-serif;font-weight:900;font-size:17px;border:1px solid #789981;box-shadow:inset 0 1px 3px rgba(255,255,255,.4)}.win{width:220px;height:38px;background:rgba(255,255,255,.1);border-radius:5px;border:2px solid #444;border-top:3px solid #222;border-bottom:2px solid #777;display:flex;justify-content:space-between;align-items:center;padding:0 18px;position:relative;box-shadow:inset 0 0 12px rgba(0,0,0,.9);overflow:hidden;backdrop-filter:blur(1px)}.win::before{content:'';position:absolute;top:0;left:-50%;width:200%;height:100%;background:linear-gradient(115deg,transparent 40%,rgba(255,255,255,.15) 45%,transparent 50%);z-index:10;pointer-events:none}.t-rl{position:absolute;top:50%;border-radius:50%;background:radial-gradient(circle,#2a221f 0,#111 80%);box-shadow:0 0 0 1px #000,0 0 6px #000;transition:all .3s linear;z-index:1}.t-l{left:34px;width:var(--tl);height:var(--tl);transform:translate(-50%,-50%)}.t-r{right:34px;width:var(--tr);height:var(--tr);transform:translate(50%,-50%)}.sp{width:30px;height:30px;border-radius:50%;background:#e0e0e0;position:relative;z-index:5;box-shadow:0 2px 4px rgba(0,0,0,.8),inset 0 0 2px #fff;border:1px solid #999}.spt{position:absolute;inset:2px;border-radius:50%;background:repeating-conic-gradient(#333 0deg,#333 30deg,#ddd 30deg,#ddd 60deg);-webkit-mask-image:radial-gradient(circle,transparent 35%,#000 36%);animation:spn 2.5s linear infinite;animation-play-state:paused}.sp::after{content:'';position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:10px;height:10px;background:#111;border-radius:50%}.ply .spt{animation-play-state:running}@keyframes spn{100%{transform:rotate(360deg)}}.pw{width:100%;max-width:350px;height:6px;background:rgba(0,0,0,.6);border-radius:3px;overflow:hidden;border:1px solid #333;margin-top:25px;cursor:pointer}.pf{width:0%;height:100%;background:linear-gradient(90deg,var(--c),var(--p));box-shadow:0 0 10px var(--p);transition:width .1s linear}.mc{margin-top:15px;display:flex;justify-content:center;align-items:center;gap:10px;width:100%}.bn{background:var(--btn-bg);border:1px solid #333;color:#999;font-weight:700;font-size:15px;padding:14px 18px;cursor:pointer;box-shadow:inset 0 1px 1px rgba(255,255,255,.1),0 4px 0 #000,0 6px 10px rgba(0,0,0,.5);border-radius:8px;transition:all .1s;display:flex;align-items:center;justify-content:center}.bn:active{transform:translateY(4px);box-shadow:0 0 0 #000,inset 0 2px 5px rgba(0,0,0,.5);color:#fff}.bn:disabled{opacity:.5;cursor:not-allowed;transform:none;box-shadow:0 4px 0 #000}.pb{color:var(--c);border-color:#005555;min-width:90px;font-size:16px;font-weight:900;letter-spacing:1px}.ply .pb{color:#fff;background:var(--p);border-color:#ff0055;text-shadow:0 1px 2px rgba(0,0,0,.5);box-shadow:0 4px 0 #880022,0 0 20px rgba(255,0,85,.4)}.sb{margin-top:25px;width:100%;max-width:350px;display:flex;justify-content:center}input{background:rgba(0,0,0,.5);border:1px solid #444;color:#fff;font-weight:700;padding:14px;width:100%;text-transform:uppercase;outline:none;text-align:center;font-size:15px;border-radius:8px;box-shadow:inset 0 2px 5px rgba(0,0,0,.5);transition:all .3s}input:focus{border-color:var(--c);box-shadow:inset 0 2px 5px rgba(0,0,0,.5),0 0 10px rgba(0,243,255,.2)}input::placeholder{color:#666;font-weight:400}.drc{position:fixed;inset:0;z-index:100;pointer-events:none}.ov{position:absolute;inset:0;background:rgba(0,0,0,.85);backdrop-filter:blur(5px);opacity:0;transition:opacity .3s}.dr{position:absolute;bottom:0;left:0;right:0;height:75vh;background:#121214;border-radius:24px 24px 0 0;transform:translateY(100%);transition:transform .3s cubic-bezier(.1,1,.5,1);display:flex;flex-direction:column;padding:25px 20px;border-top:1px solid rgba(255,255,255,.1);box-shadow:0 -10px 50px rgba(0,0,0,.8)}.dh{display:flex;justify-content:space-between;align-items:center;margin-bottom:20px;padding-bottom:15px;border-bottom:1px solid rgba(255,255,255,.05)}.drt{margin:0;color:#fff;font-size:18px;font-weight:900;letter-spacing:1px}.cb{background:rgba(255,255,255,.1);border:none;color:#fff;width:36px;height:36px;border-radius:50%;font-size:24px;cursor:pointer;display:flex;align-items:center;justify-content:center;line-height:0;transition:background .2s}.cb:active{background:rgba(255,255,255,.2)}.dco{overflow-y:auto;color:#fff;padding-bottom:20px}.drc.act{pointer-events:all} .drc.act .ov{opacity:1} .drc.act .dr{transform:translateY(0)}.mi,.pi{padding:16px;background:rgba(255,255,255,.03);border-radius:12px;margin-bottom:12px;cursor:pointer;transition:all .2s;border:1px solid rgba(255,255,255,.02)}.mi:active,.pi:active{background:rgba(255,255,255,.08);transform:scale(.98)}.pi.act{background:rgba(0,243,255,.1);border-color:var(--c);color:var(--c);font-weight:700}.md{position:fixed;inset:0;background:rgba(0,0,0,.9);z-index:200;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:20px;padding:20px;opacity:0;pointer-events:none;transition:opacity .3s;backdrop-filter:blur(10px)}.md.act{opacity:1;pointer-events:all}
-        /* НАШ ЖИВОЙ ЭКВАЛАЙЗЕР (без анимации, управляется скриптом) */
+        /* ВЕРНУЛИ КЛАССИЧЕСКУЮ АНИМАЦИЮ */
         .vc{position:absolute;top:25px;display:flex;gap:3px;align-items:flex-end;height:20px;opacity:.2;transition:opacity .3s}.ply .vc{opacity:1}
-        .bar{width:5px;background:var(--c);height:2px;border-radius:1px;box-shadow:0 0 5px var(--c);transition:height .05s ease-out, background .2s, box-shadow .2s}
+        .bar{width:5px;background:var(--c);height:3px;border-radius:1px;animation:bounce .6s infinite ease-in-out alternate;animation-play-state:paused;box-shadow:0 0 5px var(--c)}.ply .bar{animation-play-state:running}
+        @keyframes bounce{0%{height:2px;background:var(--c)}100%{height:18px;background:var(--p);box-shadow:0 0 5px var(--p)}}
     </style></head><body>
     <div class="inf"><span class="tit" id="ti">АВРОРА СВЕМА</span><span class="art" id="ar">ИНИЦИАЛИЗАЦИЯ...</span></div>
     <div class="cas" id="dk"><div class="scr tl"></div><div class="scr tr"></div><div class="scr bl"></div><div class="scr br"></div>
         <div class="lbl">
             <div class="sl">Свема</div><div class="rl"></div>
-            <!-- ПОЛОСКИ ЭКВАЛАЙЗЕРА -->
             <div class="vc">
-                <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
-                <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
+                <div class="bar" style="animation-duration:.4s"></div><div class="bar" style="animation-duration:.5s"></div><div class="bar" style="animation-duration:.3s"></div><div class="bar" style="animation-duration:.6s"></div>
+                <div class="bar" style="animation-duration:.4s"></div><div class="bar" style="animation-duration:.5s"></div><div class="bar" style="animation-duration:.3s"></div><div class="bar" style="animation-duration:.4s"></div>
             </div>
             <div class="bb">
                 <div class="win"><div class="t-rl t-l"></div><div class="t-rl t-r"></div>
@@ -77,10 +77,8 @@
             },
             
             p: {
-                au: new Audio(), cx: null, an: null, da: null, bs: [], // Audio Context variables
+                au: new Audio(),
                 init() {
-                    this.au.crossOrigin = "anonymous"; // Важно для Web Audio API!
-                    this.bs = document.querySelectorAll('.bar');
                     this.au.addEventListener("ended", () => this.nxt());
                     this.au.addEventListener("timeupdate", () => a.u.uP(this.au.currentTime, this.au.duration));
                     this.au.addEventListener("play", () => a.u.sPS(true));
@@ -91,49 +89,13 @@
                     });
                     this.au.volume = 1;
                 },
-                sA() { // Setup Audio Context
-                    if(!this.cx) {
-                        this.cx = new (window.AudioContext || window.webkitAudioContext)();
-                        const s = this.cx.createMediaElementSource(this.au);
-                        this.an = this.cx.createAnalyser();
-                        this.an.fftSize = 64; // Быстрое вычисление
-                        s.connect(this.an);
-                        this.an.connect(this.cx.destination);
-                        this.da = new Uint8Array(this.an.frequencyBinCount);
-                        this.drw(); // Запуск цикла отрисовки
-                    }
-                    if(this.cx.state === 'suspended') this.cx.resume();
-                },
-                drw() { // Отрисовка полосок (Draw)
-                    requestAnimationFrame(() => this.drw());
-                    if(this.au.paused) {
-                        this.bs.forEach(b => { b.style.height='2px'; b.style.background='var(--c)'; });
-                        return;
-                    }
-                    this.an.getByteFrequencyData(this.da);
-                    // Распределяем частоты на 8 полосок (берем низкие и средние частоты, где бас)
-                    for(let i=0; i<8; i++){
-                        const v = this.da[i*2 + 1]; // Берем каждую вторую частоту
-                        const h = 2 + (v/255)*18; // Максимум 20px высота
-                        if(this.bs[i]){
-                            this.bs[i].style.height = `${h}px`;
-                            // Если частота "бьет" сильно - красим в розовый неон
-                            this.bs[i].style.background = v > 180 ? 'var(--p)' : 'var(--c)';
-                            this.bs[i].style.boxShadow = `0 0 ${v/20}px ${v > 180 ? 'var(--p)' : 'var(--c)'}`;
-                        }
-                    }
-                },
                 ply(t) {
                     if(!t) return;
                     a.u.uT(t);
                     this.au.src = `${a.ap.b}/stream/${t.identifier}`;
-                    this.sA(); // Врубаем анализатор!
                     this.au.play().catch(e => { console.warn("Autoplay blocked"); a.u.sPS(false); });
                 },
-                tog() {
-                    this.sA(); // На всякий случай будилку для iOS
-                    if(this.au.src) this.au.paused ? this.au.play() : this.au.pause();
-                },
+                tog() { if(this.au.src) this.au.paused ? this.au.play() : this.au.pause(); },
                 nxt() {
                     if(!a.st.s.p.length) return; let i = a.st.s.ci + 1;
                     if(i >= a.st.s.p.length) i = 0; a.st.set({ ci: i }); this.ply(a.st.s.p[i]);
